Lidhja e Guestit me dhomen dhe shtimi i TotalPrice it

--- a/src/EliteResort.API/appsettings.json
+++ b/src/EliteResort.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=EliteResortDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=SHENDI;Database=EliteResortDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
