--- a/src/EliteResort.API/appsettings.json
+++ b/src/EliteResort.API/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=EliteResortDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-C44DMNO;Database=EliteResortDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
