--- a/src/EliteResort.API/appsettings.json
+++ b/src/EliteResort.API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-C44DMNO;Database=EliteResortDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=SHENDI;Database=EliteResortDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
     },
   "Logging": {
     "LogLevel": {
