implementimi i login dhe signout dhe modifiikimi i disa errorave

--- a/src/EliteResort.API/appsettings.json
+++ b/src/EliteResort.API/appsettings.json
@@ -1,7 +1,10 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=SHENDI;Database=EliteResortDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=EliteResortDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+  "AppSettings": {
+    "Token": "Ky_Eshte_Nje_Celes_Shume_I_Sigurte_Dhe_I_Gjate_Per_Elite_Resort_2026_Admin_Panel_Super_Secret_Key_1234567890"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
